--- a/task-4.html
+++ b/task-4.html
@@ -11,15 +11,15 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="label-task4">
         Email
-        <input type="email" name="email" />
+        <input type="email" name="email" class="input-task4" />
       </label>
-      <label>
+      <label class="label-task4">
         Password
-        <input type="password" name="password" />
+        <input type="password" name="password" class="input-task4" />
       </label>
-      <button type="submit">Login</button>
+      <button type="submit" class="btn-task4">Log in</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
