--- a/task-1.html
+++ b/task-1.html
@@ -12,33 +12,33 @@
 
     <ul id="categories">
       <li class="item">
-        <h2>Animals</h2>
+        <h2 class="title-task1">Animals</h2>
 
-        <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
+        <ul class="category-list">
+          <li class="category-list-item">Cat</li>
+          <li class="category-list-item">Hamster</li>
+          <li class="category-list-item">Horse</li>
+          <li class="category-list-item">Parrot</li>
         </ul>
       </li>
       <li class="item">
-        <h2>Products</h2>
+        <h2 class="title-task1">Products</h2>
 
-        <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
+        <ul class="category-list">
+          <li class="category-list-item">Bread</li>
+          <li class="category-list-item">Prasley</li>
+          <li class="category-list-item">Cheese</li>
         </ul>
       </li>
       <li class="item">
-        <h2>Technologies</h2>
+        <h2 class="title-task1">Technologies</h2>
 
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
+        <ul class="category-list">
+          <li class="category-list-item">HTML</li>
+          <li class="category-list-item">CSS</li>
+          <li class="category-list-item">JavaScript</li>
+          <li class="category-list-item">React</li>
+          <li class="category-list-item">Node.js</li>
         </ul>
       </li>
     </ul>
